exercice 3.3
